# issue-open62541-opc-ua-di-nodeset-cannot-be-loaded

./: .gitignore  build-and-run.sh  install-dependencies.sh  readme.md
bash-open62541/: build-and-publish-server-app.sh  generate-di-namespace.sh  generate-di-types.sh  start-server-app.sh
src/: main.c  meson.build
